--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "vite build",
     "build:watch": "vite build --watch",
-    "publish": "npm publish --registry https://registry.npmjs.org"
+    "pushnpm": "npm publish --registry https://registry.npmjs.org"
   },
   "keywords": [
     "moveable",
@@ -21,7 +21,6 @@
   "author": "greaclar",
   "license": "ISC",
   "devDependencies": {
-    "terser": "^5.19.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.2",
     "vite-plugin-dts": "^3.3.1",
